Fixed annoying gap

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ p.report {
 .contentPostImage img {
     max-width: 100%;
     height: auto;
+    vertical-align: top;
 }
 
 .imgPadding {
